--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,451 +1,409 @@
-/* google fonts */
 @import url("https://fonts.googleapis.com/css2?family=Secular+One&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
+
 :root {
-  --md-dark-color: #1d1d1d;
-  --dark-color: #171717;
-  --light-dark-color: #292929;
-  --yellow-color: #d4aa11;
-}
-* {
-  padding: 0;
-  margin: 0;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+    --black: #000000;
+    --darkgray: #272727;
+    --red: #c7493aff;
+    --darkred: #a33327ff;
+    --green: #689775ff;
+    --lttan: #ad8174ff;
+    
 }
 
-html {
-  line-height: 1.15;
-  /* 1 */
-  -webkit-text-size-adjust: 100%;
-  /* 2 */
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+a:link {
+    text-decoration: none;
+    color: white;
+}
+
+a:visited {
+    text-decoration: none;
+    color: white;
+}
+
+a:hover {
+    text-decoration: underline;
+    color: var(--red);
+}
+
+a:active {
+    text-decoration: underline;
+    color: var(--red);
 }
 
 main {
-  display: block;
+    display: flex;
+    flex-wrap: wrap;
 }
 
+header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background: black;
+    color: #ffffff;
+}
+
+#wrapper {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+.center-aligned {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+header h1 {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 48px;
+    color: var(--darkred);
+    border: solid 3px;
+    border-color: white;
+    padding: 20px;
+}
 body {
-  margin: 0;
-  font-family: "Inter", sans-serif;
+    background-color: var(--black);
 }
 
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
+main {
+    display: flex;
+    background-color: var(--black);
 }
 
-hr {
-  box-sizing: content-box;
-  /* 1 */
-  height: 0;
-  /* 1 */
-  overflow: visible;
-  /* 2 */
+aside {
+    flex: 30%;
+    padding: 20px;
+    flex-wrap: wrap;
+    background-color: var(--black);
+    color: white;
 }
 
-pre {
-  font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */
+section {
+    flex: 70%;
+    padding: 20px;
 }
 
-a {
-  text-decoration: none;
-  background-color: transparent;
+.side-container .results-container {
+    max-width: 800px;
+    display: grid;
+    grid-template-columns: 200px 200px 200px;
+    background: var(--darkgray);
 }
 
-img {
-  width: 100%;
-  display: block;
+.movie-results h2 {
+    color: white;
+    padding-bottom: 20px;
 }
 
-<<<<<<< HEAD
-=======
-/*
- * Add the correct display in all browsers.
- */
-summary {
-  display: list-item;
+.movie-results {
+    font-size: 20px;
 }
 
-/* Misc
-   ========================================================================== */
-/**
- * Add the correct display in IE 10+.
- */
-template {
-  display: none;
+.side {
+    border-bottom: solid;
+    border-color: var(--darkred);
+    margin-bottom: 15px;
+    background-color: var(--black);
 }
 
-/**
- * Add the correct display in IE 10.
- */
-[hidden] {
-  display: none;
-}
-
-/* 
-=================
-END NORMALIZE CSS
-=================
-*/
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-html,
-body {
-  min-height: 100%;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-  font-size: 16px;
-  color: #1a1a1a;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0 0 0.5rem;
-  line-height: 1.25;
-}
-
-h1 {
-  font-size: 2.25rem;
-  font-style: italic;
-}
-
-h2 {
-  font-size: 2rem;
-}
-
-h3 {
-  font-size: 1.75rem;
-}
-
-h4 {
-  font-size: 1.5rem;
-}
-
-h5 {
-  font-size: 1.25rem;
-}
-
-h6 {
-  font-size: 1rem;
-}
-
-p {
-  font-size: 1.1rem;
-  margin: 0 0 1rem;
-  line-height: 1.5;
-}
-
-ul,
-ol,
-dl {
-  margin-top: 0;
-  margin-bottom: 1rem;
-}
-
-label {
-  display: inline-block;
-}
-
-input,
-select,
-textarea,
->>>>>>> refs/remotes/origin/main
-button {
-  text-align: center;
-  display: inline-block;
-  padding: 0.5rem 1.2rem;
-  margin: 10px 0;
-  text-decoration: none;
-  font-size: 1rem;
-  border-radius: 0.3rem;
-  border: 1px solid transparent;
-  outline: none;
-  color: #0c97e2;
-  background-color: #8cd9fc;
-  transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
-}
-
-.container {
-  display: grid;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 1rem;
-}
-.wrapper {
-  min-height: 100vh;
-  background-color: var(--dark-color);
-}
-.wrapper .container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 1rem;
-}
-.search-container {
-  background-color: var(--md-dark-color);
-  height: 180px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-}
-
-.search-element {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: stretch;
-  -ms-flex-align: stretch;
-  align-items: stretch;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  position: relative;
-}
-.search-element h3 {
-  -ms-flex-item-align: center;
-  align-self: center;
-  margin-right: 1rem;
-  font-size: 2rem;
-  color: rgb(236, 230, 230);
-  font-weight: 500;
-  margin-bottom: 1.5rem;
-}
-.search-element .form-control {
-  padding: 1rem 2rem;
-  font-size: 1.4rem;
-  border: none;
-  border-top-left-radius: 3px;
-  border-bottom-left-radius: 3px;
-  outline: none;
-  color: var(--light-dark-color);
-  width: 350px;
-}
-.search-list {
-  position: absolute;
-  right: 0;
-  top: 100%;
-  max-height: 500px;
-  overflow-y: scroll;
-  z-index: 10;
-}
-.search-list .search-list-item {
-  background-color: var(--light-dark-color);
-  padding: 0.5rem;
-  border-bottom: 1px solid var(--dark-color);
-  width: calc(350px - 8px);
-  color: rgb(9, 9, 9);
-  cursor: pointer;
-  -webkit-transition: background-color 200ms ease;
-  -o-transition: background-color 200ms ease;
-  transition: background-color 200ms ease;
-}
-.search-list .search-list-item:hover {
-  background-color: #1f1f1f;
-}
-.search-list-item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-.search-item-thumbnail img {
-  width: 40px;
-  margin-right: 1rem;
-}
-.search-item-info h3 {
-  font-weight: 600;
-  font-size: 1rem;
-}
-.search-item-info p {
-  font-size: 0.8rem;
-  margin-top: 0.5rem;
-  font-weight: 600;
-  opacity: 0.6;
-}
-
-/* thumbnail */
-.search-list::-webkit-scrollbar {
-  width: 8px;
-}
-.search-list::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-}
-.search-list::-webkit-scrollbar-thumb {
-  background-color: var(--yellow-color);
-  outline: none;
-  border-radius: 10px;
-}
-
-/* js related class */
-.hide-search-list {
-  display: none;
-}
-
-/* movie result */
-.result-container {
-  padding: 3rem 0;
-}
-.movie-poster img {
-  max-width: 300px;
-  margin: 0 auto;
-  border: 4px solid #fff;
-}
-.movie-info {
-  text-align: center;
-  color: rgb(22, 22, 22);
-  padding-top: 3rem;
-}
-
-/* movie info stylings */
-.movie-title {
-  font-size: 2rem;
-  color: var(--yellow-color);
-}
-.movie-misc-info {
-  list-style-type: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  padding: 1rem;
-}
-.movie-info .year {
-  font-weight: 500;
-}
-.movie-info .rated {
-  background-color: var(--yellow-color);
-  padding: 0.4rem;
-  margin: 0 0.4rem;
-  border-radius: 3px;
-  font-weight: 600;
-}
-.movie-info .released {
-  font-size: 0.9rem;
-  opacity: 0.9;
-}
-.movie-info .writer {
-  padding: 0.5rem;
-  margin: 1rem 0;
-}
-.movie-info .genre {
-  background-color: var(--light-dark-color);
-  display: inline-block;
-  padding: 0.5rem;
-  border-radius: 3px;
-}
-.movie-info .plot {
-  max-width: 400px;
-  margin: 1rem auto;
-}
-.movie-info .language {
-  color: var(--yellow-color);
-  font-style: italic;
-}
-.movie-info .awards {
-  font-weight: 300;
-  font-size: 0.9rem;
-}
-.movie-info .awards i {
-  color: var(--yellow-color);
-  margin: 1rem 0.7rem 0 0;
-}
-
-@media (max-width: 450px) {
-  .logo p {
-    font-size: 1.4rem;
-  }
-  .search-element .form-control {
-    width: 90%;
-    margin: 0 auto;
-    padding: 0.5rem 1rem;
-  }
-  .search-element h3 {
-    font-size: 1.4rem;
-  }
-  .search-list {
-    width: 90%;
-    right: 50%;
-    -webkit-transform: translateX(50%);
-    -ms-transform: translateX(50%);
-    transform: translateX(50%);
-  }
-  .search-list .search-list-item {
+.btn {
+    background-color: var(--darkred);
+    color: white;
+    font-size: 1.3rem;
+    text-decoration: none;
+    padding: 6px 5px;
     width: 100%;
+    display: block;
+    margin: 15px 0;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    box-shadow: 3px 3px var(--dark);
+    transform: translate(-1px, -1px);
+}
+
+.btn:hover{
+    background-color: var(--red);
+    font-weight: bold;
+}
+
+.show-results {
+    background-color: var(--darkgray);
+    color: white;
+    padding: 20px;
+}
+
+footer {
+    background-color: var(--black);
+}
+
+.search-container {
+    background-color: var(--md-dark-color);
+    height: 180px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
   }
-  .movie-misc-info {
+  
+  .search-element {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: stretch;
+    -ms-flex-align: stretch;
+    align-items: stretch;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
-  }
-  .movie-misc-info li:nth-child(2) {
-    margin: 0.8rem 0;
-  }
-}
-
-@media (min-width: 800px) {
-  .search-element {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: row;
-    flex-direction: row;
+    position: relative;
   }
   .search-element h3 {
-    margin-bottom: 0;
+    -ms-flex-item-align: center;
+    align-self: center;
+    margin-right: 1rem;
+    font-size: 2rem;
+    color: rgb(236, 230, 230);
+    font-weight: 500;
+    margin-bottom: 1.5rem;
   }
-  .result-grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+  .search-element .form-control {
+    padding: 1rem 2rem;
+    font-size: 1.4rem;
+    border: none;
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+    outline: none;
+    color: var(--light-dark-color);
+    width: 350px;
+  }
+  .search-list {
+    position: absolute;
+    right: 0;
+    top: 100%;
+    max-height: 500px;
+    overflow-y: scroll;
+    z-index: 10;
+  }
+  .search-list .search-list-item {
+    background-color: var(--light-dark-color);
+    padding: 0.5rem;
+    border-bottom: 1px solid var(--dark-color);
+    width: calc(350px - 8px);
+    color: rgb(9, 9, 9);
+    cursor: pointer;
+    -webkit-transition: background-color 200ms ease;
+    -o-transition: background-color 200ms ease;
+    transition: background-color 200ms ease;
+  }
+  .search-list .search-list-item:hover {
+    background-color: #1f1f1f;
+  }
+  .search-list-item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+  .search-item-thumbnail img {
+    width: 40px;
+    margin-right: 1rem;
+  }
+  .search-item-info h3 {
+    font-weight: 600;
+    font-size: 1rem;
+  }
+  .search-item-info p {
+    font-size: 0.8rem;
+    margin-top: 0.5rem;
+    font-weight: 600;
+    opacity: 0.6;
+  }
+
+  /* js related class */
+.hide-search-list {
+    display: none;
+  }
+  
+  /* movie result */
+  .result-container {
+    padding: 3rem 0;
+  }
+  .movie-poster img {
+    max-width: 300px;
+    margin: 0 auto;
+    border: 4px solid #fff;
   }
   .movie-info {
-    text-align: left;
-    padding-top: 0;
+    text-align: center;
+    color: rgb(22, 22, 22);
+    padding-top: 3rem;
   }
-  .movie-info .movie-misc-info {
-    -webkit-box-pack: start;
-    -ms-flex-pack: start;
-    justify-content: flex-start;
-    padding-left: 0;
+  
+/* thumbnail */
+.search-list::-webkit-scrollbar {
+    width: 8px;
   }
-  .movie-info .plot {
-    margin-left: 0;
+  .search-list::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
+  .search-list::-webkit-scrollbar-thumb {
+    background-color: var(--yellow-color);
+    outline: none;
+    border-radius: 10px;
+  }
+
+
+  /* movie info stylings */
+  .movie-title {
+    font-size: 2rem;
+    color: var(--yellow-color);
+  }
+  .movie-misc-info {
+    list-style-type: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    padding: 1rem;
+  }
+  .movie-info .year {
+    font-weight: 500;
+  }
+  .movie-info .rated {
+    background-color: var(--yellow-color);
+    padding: 0.4rem;
+    margin: 0 0.4rem;
+    border-radius: 3px;
+    font-weight: 600;
+  }
+  .movie-info .released {
+    font-size: 0.9rem;
+    opacity: 0.9;
   }
   .movie-info .writer {
-    padding-left: 0;
-    margin-left: 0;
+    padding: 0.5rem;
+    margin: 1rem 0;
   }
-}
+  .movie-info .genre {
+    background-color: var(--light-dark-color);
+    display: inline-block;
+    padding: 0.5rem;
+    border-radius: 3px;
+  }
+  .movie-info .plot {
+    max-width: 400px;
+    margin: 1rem auto;
+  }
+  .movie-info .language {
+    color: var(--yellow-color);
+    font-style: italic;
+  }
+  .movie-info .awards {
+    font-weight: 300;
+    font-size: 0.9rem;
+  }
+  .movie-info .awards i {
+    color: var(--yellow-color);
+    margin: 1rem 0.7rem 0 0;
+  }
+
+  @media (max-width: 450px) {
+    .logo p {
+      font-size: 1.4rem;
+    }
+    .search-element .form-control {
+      width: 90%;
+      margin: 0 auto;
+      padding: 0.5rem 1rem;
+    }
+    .search-element h3 {
+      font-size: 1.4rem;
+    }
+    .search-list {
+      width: 90%;
+      right: 50%;
+      -webkit-transform: translateX(50%);
+      -ms-transform: translateX(50%);
+      transform: translateX(50%);
+    }
+    .search-list .search-list-item {
+      width: 100%;
+    }
+    .movie-misc-info {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+    }
+    .movie-misc-info li:nth-child(2) {
+      margin: 0.8rem 0;
+    }
+  }
+  
+  @media (min-width: 800px) {
+    .search-element {
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+      flex-direction: row;
+    }
+    .search-element h3 {
+      margin-bottom: 0;
+    }
+    .result-grid {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+    }
+    .movie-info {
+      text-align: left;
+      padding-top: 0;
+    }
+    .movie-info .movie-misc-info {
+      -webkit-box-pack: start;
+      -ms-flex-pack: start;
+      justify-content: flex-start;
+      padding-left: 0;
+    }
+    .movie-info .plot {
+      margin-left: 0;
+    }
+    .movie-info .writer {
+      padding-left: 0;
+      margin-left: 0;
+    }
+  }
