adding padding to movie title class

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -264,6 +264,7 @@ footer {
   font-size: 2rem;
   color: var(--yellow-color);
   padding-top: 20px;
+  padding-right: 20px;
 }
 
 .result-container {
