changed search text in html and styled with some extra padding to make it less crowded

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,6 +188,10 @@ footer {
   border-radius: 5px;
 }
 
+.search-container h2 {
+  padding-right: 30px;
+}
+
 .search-element {
   display: -webkit-box;
   display: -ms-flexbox;
