--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,7 +215,6 @@ footer {
   color: rgb(236, 230, 230);
   font-weight: 500;
   margin-bottom: 1.5rem;
-  
 }
 .search-element .form-control {
   /* padding: 1rem 2rem; */
@@ -226,7 +225,6 @@ footer {
   outline: none;
   color: var(--light-dark-color);
   width: 350px;
-
 }
 .search-list {
   position: absolute;
@@ -344,9 +342,6 @@ footer {
   padding: 1rem;
 }
 
-.movie-info .year {
-  font-weight: 500;
-}
 .movie-info .rated {
   background-color: var(--yellow-color);
   padding: 0.4rem;
@@ -354,20 +349,16 @@ footer {
   border-radius: 3px;
   font-weight: 600;
 }
-.movie-info .released {
+.movie-info .released .year {
   font-size: 0.9rem;
   opacity: 0.9;
 }
-.movie-info .writer {
+.movie-info .writer .genre .actors {
   padding: 0.5rem;
   margin: 1rem 0;
+  line-height: 30px;
 }
-.movie-info .genre {
-  background-color: var(--light-dark-color);
-  display: inline-block;
-  padding: 0.5rem;
-  border-radius: 3px;
-}
+
 .movie-info .plot {
   max-width: 400px;
   margin: 1rem auto;
@@ -397,9 +388,9 @@ footer {
   height: 100%;
   overflow: auto;
   background-color: rgba(0, 0, 0, 0.5);
-  }
-  
-  .modal-content {
+}
+
+.modal-content {
   background-color: #fefefe;
   margin: 15% auto;
   border-radius: 5px;
@@ -407,25 +398,24 @@ footer {
   border: 1px solid #888;
   width: 30%;
   position: relative;
-  }
-  
-  .close {
+}
+
+.close {
   color: #aaa;
   float: right;
   font-size: 28px;
   font-weight: bold;
-  position:absolute;
+  position: absolute;
   top: 0;
   right: 0;
-  }
-  
-  .close:hover,
-  .close:focus {
+}
+
+.close:hover,
+.close:focus {
   color: black;
   text-decoration: none;
   cursor: pointer;
-  }
-
+}
 
 @media (max-width: 450px) {
   .logo p {
