--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Secular+One&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:300,400,700,800");
 
+/* Variables */
 :root {
   --black: #000000;
   --darkgray: #272727;
@@ -15,11 +16,38 @@
   --yellow-color: #d4aa11;
 }
 
+/* Global Styles */
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+html,
+body {
+  margin: 0;
+  font-family: "Montserrat", helvetica, arial, sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+/* header and dog logo */
+header {
+  height: 12vh;
+  background: var(--light-dark-color);
+  display: flex;
+  align-items: center;
+  justify-content: left;
+}
+
+#doggie {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  margin-top: 15px;
 }
 
 a:link {
@@ -45,48 +73,6 @@ a:active {
 main {
   display: flex;
   flex-wrap: wrap;
-}
-
-header {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
-  background: black;
-  color: var(--darkred);
-}
-
-#wrapper {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-}
-
-.center-aligned {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-header h1 {
-  position: absolute;
-  left: 50%;
-  top: 80%;
-  transform: translate(-50%, -50%);
-  font-size: 48px;
-  border: solid 3px;
-  border-color: white;
-  padding: 20px;
-  background-color: var(--transpBlack);
-}
-body {
-  background-color: var(--black);
-}
-
-main {
-  display: flex;
   background-color: var(--black);
 }
 
@@ -123,7 +109,8 @@ section {
   background-color: var(--darkred);
   color: white;
   font-size: 1.3rem;
-  text-decoration: none;
+  font-family: "Montserrat", helvetica, arial, sans-serif;
+  /* text-decoration: none; */
   padding: 6px 5px;
   width: 100%;
   display: block;
@@ -131,8 +118,9 @@ section {
   border-radius: 5px;
   border: none;
   outline: none;
-  box-shadow: 3px 3px var(--dark);
+  /* box-shadow: 3px 3px var(--dark); */
   transform: translate(-1px, -1px);
+  cursor: pointer;
 }
 
 .btn:hover {
@@ -173,7 +161,7 @@ footer {
 }
 
 .search-container {
-  background-color: var(--md-dark-color);
+  background-color: var(--darkred);
   height: 100px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -184,7 +172,8 @@ footer {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  margin-bottom: 20px;
+  margin-bottom: 5px;
+  margin-right: 25px;
   border-radius: 5px;
 }
 
@@ -207,15 +196,18 @@ footer {
   -ms-flex-direction: column;
   flex-direction: column;
   position: relative;
+  padding: 15px;
 }
+
 .search-element h3 {
   -ms-flex-item-align: center;
   align-self: center;
   font-size: 25px;
   color: rgb(236, 230, 230);
-  font-weight: 500;
+  /* font-weight: 500; */
   margin-bottom: 1.5rem;
 }
+
 .search-element .form-control {
   /* padding: 1rem 2rem; */
   font-size: 1.4rem;
@@ -226,6 +218,7 @@ footer {
   color: var(--light-dark-color);
   width: 350px;
 }
+
 .search-list {
   position: absolute;
   right: 0;
@@ -234,6 +227,7 @@ footer {
   overflow-y: scroll;
   z-index: 10;
 }
+
 .search-list .search-list-item {
   background-color: var(--light-dark-color);
   padding: 0.5rem;
@@ -245,9 +239,11 @@ footer {
   -o-transition: background-color 200ms ease;
   transition: background-color 200ms ease;
 }
+
 .search-list .search-list-item:hover {
   background-color: #1f1f1f;
 }
+
 .search-list-item {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -349,10 +345,17 @@ footer {
   border-radius: 3px;
   font-weight: 600;
 }
+
+.movie-info .rated i {
+  color: var(--dark-color);
+  margin-right: 0.5rem;
+}
+
 .movie-info .released .year {
   font-size: 0.9rem;
   opacity: 0.9;
 }
+
 .movie-info .writer .genre .actors {
   padding: 0.5rem;
   margin: 1rem 0;
@@ -363,14 +366,17 @@ footer {
   max-width: 400px;
   margin: 1rem auto;
 }
+
 .movie-info .language {
   color: var(--yellow-color);
   font-style: italic;
 }
+
 .movie-info .awards {
   font-weight: 300;
   font-size: 0.9rem;
 }
+
 .movie-info .awards i {
   color: var(--yellow-color);
   margin: 1rem 0.7rem 0 0;
