Change font color of year in the search box from black to white

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,6 +213,10 @@ footer {
   margin-bottom: 1.5rem;
 }
 
+.search-element p{
+  color: white;
+}
+
 .search-element .form-control {
   /* padding: 1rem 2rem; */
   font-size: 1.4rem;
